--- a/Project/Client/wwwroot/css/site.css
+++ b/Project/Client/wwwroot/css/site.css
@@ -578,7 +578,7 @@ hr {
 
 .best-seller_most-player_top-upcoming-wishlisted h2 {
     transition: margin 0.5s ease;
-    font-size: 2vw;
+    font-size: 1.5vw;
     font-family: 'Poppins', sans-serif;
     font-weight:bold;
 }
@@ -616,9 +616,11 @@ hr {
     .container_gamemonth .card_gamemonth {
         width: 380px;
         border-radius: 25px;
-        background: #fff;
+        background: linear-gradient(#fff, #fff) padding-box, linear-gradient(135deg, #00A97F, #800080) border-box;
+        border: 2px solid transparent;
         box-shadow: 0 0 20px #E0F2F1;
     }
+
 
 .container_gamemonth .card_gamemonth .img_gamemonth{
     padding: 25px;
@@ -633,24 +635,28 @@ hr {
 }
 
 .card_gamemonth .info {
-    border-top: 2px solid #E0F2F1;
     position: relative;
+    border-top: 2px solid transparent;
+    background: linear-gradient(#fff, #fff) padding-box, linear-gradient(135deg, #00A97F, #800080) border-box
 }
+
 
     .card_gamemonth .info .name {
         position: absolute;
         left: 50%;
         top: -22px;
         transform: translate(-50%);
-        padding: 10px;
+        padding: 10px 20px;
         font-size: 20px;
         border-radius: 50px;
-        background: #E0F2F1;
+        background: linear-gradient(#fff, #fff) padding-box, linear-gradient(135deg, #00A97F, #800080) border-box;
+        border: 2px solid transparent;
         font-weight: bold;
         white-space: nowrap;
         box-shadow: 0px 10px 20px -10px #E0F2F1;
         font-family: 'Poppins';
     }
+
 
     .card_gamemonth .info .about {
         margin-top: 30px;
@@ -879,34 +885,60 @@ hr {
 
 
 /*Other Product*/
-.ortherproduct{
-    width:95%;
-    min-height:500px;
-    margin:0 auto;
+.ortherproduct {
+    width: 95%;
+    min-height: 500px;
+    margin: 0 auto;
 }
+
 .lisotherproduct_name {
     width: 100%;
     min-height: 50px;
-    justify-content: center;
+    display: flex;
+    justify-content: space-between; /* Để các thẻ a cách đều nhau */
     align-items: center;
     font-size: 22px;
-    font-weight:bold;
-    text-align:center;
+    font-weight: bold;
+    text-align: center;
 }
 
-.lisotherproduct_name a{
-    color:#62e079;
-    text-decoration:none;
-    text-align:center;
-    align-items:center;
-    justify-content: center;
-    min-height:40px;
-    padding:5px;
+    .lisotherproduct_name a {
+        display: block;
+        padding: 10px 20px;
+        text-align: center;
+        text-decoration: none;
+        border: 3px solid transparent;
+        border-radius: 12px;
+        background: linear-gradient(#fff, #fff) padding-box, linear-gradient(135deg, #00A97F, #800080) border-box;
+        color: #000; /* Màu chữ mặc định */
+        font-weight: bold;
+        flex-grow: 1; /* Đảm bảo các thẻ a có độ dài bằng nhau */
+        margin: 0 5px; /* Thêm khoảng cách giữa các thẻ a */
+        text-transform: uppercase;
+    }
+
+        .lisotherproduct_name a:hover {
+            color: #fff; /* Màu chữ khi hover */
+            background: #00A97F; /* Màu nền khi hover */
+            border-color: #00A97F; /* Màu viền khi hover */
+        }
+
+.header_section {
+    width: 100%;
+    border: 3px solid transparent;
+    border-radius: 12px;
+    padding: 15px 20px;
+    background: linear-gradient(#fff, #fff) padding-box, linear-gradient(135deg, #00A97F, #800080) border-box;
+    max-width: 83.3%;
+    margin: 0 auto;
+    text-align: center;
 }
-.lisotherproduct_name a:hover{
-    background-color:#0c9a77;
-    color:white;
-}
+
+    .header_section h1 {
+        font-family: 'Poppins', sans-serif;
+        text-transform: uppercase;
+        color: #00A97F;
+    }
 
 
 /*#foryou, #popular, #free, #new, #more {
