--- a/Project/Client/Views/User/UserDashboard.cshtml
+++ b/Project/Client/Views/User/UserDashboard.cshtml
@@ -145,7 +145,7 @@
             <img src="~/Image/game.jpg" alt="Project">
             <div class="project-info">
                 <strong class="d-inline-block text-truncate" style="max-width: 150px;">Meow Battle Battle Battle</strong>
-                <div><small style="min-width: 150px"><a href="">Edit</a> | <a href="">Analytics</a> | <a href="">Widget</a> | <a href="">More</a></small></div>
+                <div><small style="min-width: 150px"><a asp-controller="User" asp-action="EditProduct">Edit</a> | <a href="">Analytics</a> | <a href="">Widget</a> | <a href="">More</a></small></div>
             </div>
             <span class="badge bg-secondary">DRAFT</span>
         </div>
