APIComment/Like/Dislike+Call/Client+UserDasboad

--- a/Project/Client/Views/User/UserDashboard.cshtml
+++ b/Project/Client/Views/User/UserDashboard.cshtml
@@ -141,7 +141,7 @@
                 </div>
             }
         }
-        <div class="project-item">
+        @* <div class="project-item">
             <img src="~/Image/game.jpg" alt="Project">
             <div class="project-info">
                 <strong class="d-inline-block text-truncate" style="max-width: 150px;">Meow Battle Battle Battle</strong>
@@ -180,7 +180,7 @@
                 <div><small>Edit | Analytics | Widget | More</small></div>
             </div>
             <span class="badge bg-secondary">DRAFT</span>
-        </div>
+        </div> *@
         <a asp-controller="User" asp-action="UploadProduct" class="btn btn-danger w-100">Create New Project</a>
     </div>
 
