update view product, detail

--- a/Project/Client/Views/Home/Index.cshtml
+++ b/Project/Client/Views/Home/Index.cshtml
@@ -233,8 +233,8 @@
                                 : product.Description)
                         </p>
                         @* <a asp-controller="Product" asp-action="ProductDetail" asp-route-Id="@product.Id" class="btn_orther">Read More</a> *@
-                        <div class="row d-flex align-items-center justify-content-between">
-                            <a asp-controller="Product" asp-action="ProductDetail" asp-route-Id="@product.Id" class="col-md-6 btn_orther ms-2 text-center">Read More</a>
+                        <div class="row">
+                            <a asp-controller="Product" asp-action="ProductDetail" asp-route-Id="@product.Id" class="col-md-6 btn_orther text-center">Read More</a>
                             <div class="col-md-3"></div>
                             @* Day la trai tym ne *@
                             <div title="Wishlist" class="col-md-3 heart-container" style="width:20px;height:20px;  ">
