--- a/Project/Client/Views/Product/Product.cshtml
+++ b/Project/Client/Views/Product/Product.cshtml
@@ -20,8 +20,10 @@
                     <!-- Price Filter -->
                     <div class="filter-section mb-4">
                         <h5 class="filter-title">Price</h5>
-                        <input type="number" class="form-range form-control price-input" name="minRange" placeholder="Min price">
-                        <input type="number" class="form-range form-control price-input mt-2" name="maxRange" placeholder="Max price">
+                        <div class="d-flex gap-2">
+                            <input type="number" class="form-control price-input" name="minRange" placeholder="Min price">
+                            <input type="number" class="form-control price-input" name="maxRange" placeholder="Max price">
+                        </div>
                     </div>
 
                     <!-- Category Filter -->
@@ -71,7 +73,7 @@
 
                     <!-- Sold Filter -->
                     <div class="filter-section mb-4">
-                        <h5 class="filter-title">Sort by Sold</h5>
+                        <h5 class="filter-title">Sold</h5>
                         <select name="sold" class="form-select" aria-label="Type">
                             <option value="0">>0</option>
                             <option value="100">>100</option>
@@ -181,7 +183,7 @@
                     {
                         foreach (var product in Model.Product)
                         {
-                            <div class="col-12 col-sm-12 col-md-3 card_other mt-4" style="width: 14rem; height:270px;">
+                            <div class="col-12 col-sm-12 col-md-3 card_other mt-4" style="width: 14rem; height:300px;">
                                 @if (product.Links != null)
                                 {
                                     string firstImageUrl = null; // Biến để lưu URL hình ảnh đầu tiên
